--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="video-container">
-        <iframe src="https://www.youtube.com/watch?v=p4YpTj2bWo0" allowfullscreen></iframe>
+        <iframe src="https://youtu.be/p4YpTj2bWo0?si=gLNrCo7wJfhrB6w5" allowfullscreen></iframe>
     </div>
 </body>
 </html>
