--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="sidebar-link">
         <img src="icons/group.svg">
         <div>
-            <a href="/members.html">Groups</a>
+            <a href="wisdom/members.html">Groups</a>
         </div>
       </div>
       <!-- <div class="sidebar-link">
