--- a/pages/page10.html
+++ b/pages/page10.html
@@ -52,7 +52,7 @@
         <img src="img/earth_crust.gif" alt="Centered GIF">
         <div class="label"><h1>Earth Crust</h1></div>
     </div>
-    <button class="home-button" onclick="window.location.href='./wisdom/index.html';">Home</button>
+    <button class="home-button" onclick="window.location.href='../index.html';">Home</button>
     <!-- Add more images and labels as needed -->
 </body>
 </html>
