--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Human Evolution</a>
+                <a href="/wisdom/pages/page2.html">Human Evolution</a>
               </p>
             </div>
           </div>
@@ -82,7 +82,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Charles Darwin (Figure)</a>
+                <a href="/wisdom/pages/page3.html">Charles Darwin (Figure)</a>
               </p>
             </div>
           </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Albert Einstein (Figure)</a>
+                <a href="/wisdom/pages/page4.html">Albert Einstein (Figure)</a>
               </p>
             </div>
           </div>
@@ -116,7 +116,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Solar System (All Planet)</a>
+                <a href="/wisdom/pages/page5.html">Solar System (All Planet)</a>
               </p>
             </div>
           </div>
@@ -134,7 +134,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Mitosis/ Meiosis (Process)</a>
+                <a href="/wisdom/pages/page6.html">Mitosis/ Meiosis (Process)</a>
               </p>
             </div>
           </div>
@@ -151,7 +151,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Economic Models</a>
+                <a href="/wisdom/pages/page7.html">Economic Models</a>
               </p>
             </div>
           </div>
@@ -168,7 +168,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Human Anatomy (Skeletal System)</a>
+                <a href="/wisdom/pages/page8.html">Human Anatomy (Skeletal System)</a>
               </p>
             </div>
           </div>
@@ -185,7 +185,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Food Pyramid</a>
+                <a href="/wisdom/pages/page9.html">Food Pyramid</a>
               </p>
             </div>
           </div>
@@ -202,7 +202,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Color Theory: Primary, Secondary and Tertiary</a>
+                <a href="/wisdom/pages/page10.html">Color Theory: Primary, Secondary and Tertiary</a>
               </p>
             </div>
           </div>
@@ -219,7 +219,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Earth's Layer:  Cross Sectional (Crust Mantle Outer & Inner Core)</a>
+                <a href="/wisdom/pages/page11.html">Earth's Layer:  Cross Sectional (Crust Mantle Outer & Inner Core)</a>
               </p>
             </div>
           </div>
@@ -236,7 +236,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Mr. Isaac Newton (Figure)</a>
+                <a href="/wisdom/pages/page12.html">Mr. Isaac Newton (Figure)</a>
               </p>
             </div>
           </div>
@@ -253,7 +253,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                <a href="#">Atoms</a>
+                <a href="/wisdom/pages/page13.html">Atoms</a>
               </p>
             </div>
           </div>
